--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,51 @@
 *.exe
 *.out
 *.app
+#include <iostream>
+#include<algorithm>
+#include<string>  
+
+using namespace std;
+int main()
+{
+	int n,num,count=0,m=0;
+	string s,s3="";
+	cin >>s;
+	 
+	m = s.size();
+	for (int i = 0; i <m; i++) {
+		if (isupper(s[i])) {
+		s[i] = tolower(s[i]);
+		}
+		if (s[i] == 'a' || s[i] == 'o' || s[i] == 'y' || s[i] == 'e' || s[i] == 'u' || s[i] == 'i' )
+		{
+			for (int j = i; j < m-1; j++) {
+				s[j] = s[j + 1];
+			}
+			m--;
+			i--;
+		}
+	
+		//cout << s;
+		
+	 }
+	 
+	//cout << m;
+	int l = 0;
+	for (int i = 0; i <m+m; i ++) {
+		if (i % 2 == 0)
+			s3 = s3 + '.';
+		else {
+			s3 = s3 + s[l];
+			l++;
+		}
+			
+
+
+		}
+	for (int i = 0; i <m+m; i++) {
+		cout << s3[i];
+	}
+	 
+	return 0;
+}
